--- a/THANKS
+++ b/THANKS
@@ -116,6 +116,7 @@
   Marcel Loose			loose@astron.nl
   Mark Kettenis			kettenis@phys.uva.nl
   Michael Haubenwallner		michael.haubenwallner@salomon.at
+  Mike Gorchak			mike@malva.ua
   Mike Frysinger		vapier@gentoo.org
   Nix				nix@esperi.org.uk
   Olaf Lenz			olenz@fias.uni-frankfurt.de
