--- a/THANKS
+++ b/THANKS
@@ -122,6 +122,7 @@
   Olaf Lenz			olenz@fias.uni-frankfurt.de
   Olly Betts			olly@muscat.co.uk
   Patrick Welche		prlw1@newn.cam.ac.uk
+  Paul Biggar			paul.biggar@gmail.com
   Paul Eggert			eggert@twinsun.com
   Peter Eisentraut		peter_e@gmx.net
   Peter Jeremy			peterjeremy@optushome.com.au
