--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,7 @@ New in 2.2.8 2009-??-??: git version 2.2.7a, Libtool team:
     only the default informational output. See New Features, --no-silent.
   - Link tests are guarded by cache variables so they can be avoided for
     bootstrapping purposes (e.g., when link tests are not possible).
+  - Argument mangling of execute mode has been improved (i.e., lessened).
 
 * Miscellaneous changes:
 
