--- a/tests/install.at
+++ b/tests/install.at
@@ -1,6 +1,6 @@
 # install.at -- install mode tests             -*- Autotest -*-
 #
-#   Copyright (C) 2008 Free Software Foundation, Inc.
+#   Copyright (C) 2008, 2009 Free Software Foundation, Inc.
 #   Written by Ralf Wildenhues, 2008
 #
 #   This file is part of GNU Libtool.
@@ -30,7 +30,7 @@ AT_KEYWORDS([libtool])
 
 AT_CHECK([$LIBTOOL --features | grep 'enable shared libraries' || exit 77],
 	 [], [ignore])
-sed 's,^\(install_override_mode=\).*,&755,' < $LIBTOOL > ./libtool
+sed 's,^\(install_override_mode\)=.*,\1=755,' < $LIBTOOL > ./libtool
 LIBTOOL=./libtool
 chmod a+rx $LIBTOOL
 
