--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix sed script portability issue in func_version.
+	* libltdl/config/getopt.m4sh (func_version): Remove space in
+	`/\./! {' sed command, to please HP-UX sed.
+
 2009-01-31  Jeff Squyres <jsquyres@cisco.com>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
