--- a/tests/install.at
+++ b/tests/install.at
@@ -41,10 +41,10 @@ echo 'int a () { return 0; }' > a.c
 $LIBTOOL --mode=compile $CC $CPPFLAGS $CFLAGS -c a.c
 AT_CHECK([$LIBTOOL --mode=link $CC $CFLAGS $LDFLAGS -o liba.la a.lo ]dnl
 	 [-rpath $inst -no-undefined], [], [ignore], [ignore])
-AT_CHECK([$LIBTOOL --mode=install $INSTALL liba.la $inst],
+AT_CHECK([$LIBTOOL --mode=install $lt_INSTALL liba.la $inst],
 	 [], [stdout], [ignore])
 AT_CHECK([grep ' -m 755' stdout], [], [ignore])
-AT_CHECK([$LIBTOOL --mode=install $INSTALL -m 644 liba.la $inst],
+AT_CHECK([$LIBTOOL --mode=install $lt_INSTALL -m 644 liba.la $inst],
 	 [], [stdout], [ignore])
 AT_CHECK([grep ' -m 755' stdout], [], [ignore])
 AT_CHECK([grep ' -m 644.*liba.la' stdout], [], [ignore])
