--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* doc/libtool.texi (Distributing libltdl, Test descriptions):
+	Add missing parentheses.
+
 2009-02-28  Tim Rice  <tim@multitalents.net>
 
 	Fix C++ template handling for old archives on UnixWare 7.1.4.
