--- a/THANKS
+++ b/THANKS
@@ -104,6 +104,7 @@
   Joel N. Weber II		devnull@gnu.org
   Joerg Sonnenberger		joerg@netbsd.org
   John Bowler			jbowler@acm.org
+  John Wolfe			jlw@sco.com
   Joseph Beckenbach III		jrb3@best.com
   Karl Berry			karl@freefriends.org
   Kenneth Albanowski		kjahds@kjahds.com
