--- a/THANKS
+++ b/THANKS
@@ -127,6 +127,7 @@
   Paul Eggert			eggert@twinsun.com
   Peter Eisentraut		peter_e@gmx.net
   Peter Jeremy			peterjeremy@optushome.com.au
+  Peter Kjellerstedt		peter.kjellerstedt@axis.com
   Rainer Orth			ro@TechFak.Uni-Bielefeld.DE
   Rainer Tammer			tammer@tammer.net
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
@@ -136,6 +137,7 @@
   Roberto Bagnara		bagnara@cs.unipr.it
   Roland Mainz			roland.mainz@nrubsig.org
   Roumen Petrov			bugtrack@roumenpetrov.info
+  Rudolf Leitgeb		r.leitgeb@x-pin.com
   Sam Thursfield		ssssam@gmail.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
   Simon Josefsson		jas@extundo.com
