[cygwin] Improve operation with gcc4
* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [cygwin*]:
Add w32api to sys_lib_search_path_spec without overriding gcc's
own search path.

Signed-off-by: Charles Wilson <libtool@cwilson.fastmail.fm>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 2009-03-29  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>  (tiny change)
 	    Charles Wilson  <libtool@cwilson.fastmail.fm>
 
+	[cygwin] Improve operation with gcc4
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [cygwin*]:
+	Add w32api to sys_lib_search_path_spec without overriding gcc's
+	own search path.
+
+2009-03-29  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>  (tiny change)
+	    Charles Wilson  <libtool@cwilson.fastmail.fm>
+
 	Use correct export_dynamic_flag_spec for PE-COFF $hosts
 	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) 
 	[cygwin*|mingw*|pw32*|cegcc*]: Define export_dynamic_flag_spec
