--- a/THANKS
+++ b/THANKS
@@ -78,6 +78,7 @@
   Carl D. Roth			roth@cse.ucsc.edu
   Chris P. Ross			cross@eng.us.uu.net
   Christian Biesinger		cbiesinger@web.de
+  Christian Rössel		christian.roessel@gmx.de
   Christoph Egger		Christoph_Egger@gmx.de
   Christopher Hulbert		cchgroupmail@gmail.com
   Craig Tierney			Craig.Tierney@noaa.gov
