Allow through -tp=* at link time, for pgcc.
* libltdl/config/ltmain.m4sh (func_mode_link): Portlant Group
pgcc uses `-tp=PROCESSOR' for target processor selection; allow
the flag through at link time.
Report by Ethan Mallove.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-05-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Allow through -tp=* at link time, for pgcc.
+	* libltdl/config/ltmain.m4sh (func_mode_link): Portlant Group
+	pgcc uses `-tp=PROCESSOR' for target processor selection; allow
+	the flag through at link time.
+	Report by Ethan Mallove.
+
 	Fix quoting of eval'ed variable.
 	* libltdl/m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Double-quote
 	$lt_cv_sys_global_symbol_pipe for eval, like we do in ltmain,
