--- a/THANKS
+++ b/THANKS
@@ -105,6 +105,7 @@
   Joel N. Weber II		devnull@gnu.org
   Joerg Sonnenberger		joerg@netbsd.org
   John Bowler			jbowler@acm.org
+  John R. Cary			cary@txcorp.com
   John Wolfe			jlw@sco.com
   Joseph Beckenbach III		jrb3@best.com
   Karl Berry			karl@freefriends.org
