Improved support for FreeMiNT.
* libltdl/m4/libtool.m4 (LT_CMD_MAX_LEN) [mint]: Hard-code
command line length limit to 8192, to avoid long test.
* NEWS, THANKS: Update.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/THANKS
+++ b/THANKS
@@ -67,6 +67,7 @@
   their time and energy in helping to track down bugs, port to new systems,
   and generally assist in the libtool maintainership process:
 
+  Alan Hourihane		alanh@fairlite.co.uk
   Alexei Sheplyakov		varg@theor.jinr.ru
   Alon Bar-Lev			alon.barlev@gmail.com
   Andreas Schwab		schwab@suse.de
