--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-05-02  Alan Hourihane  <alanh@fairlite.co.uk>  (tiny change)
+
+	Improved support for FreeMiNT.
+	* libltdl/m4/libtool.m4 (LT_CMD_MAX_LEN) [mint]: Hard-code
+	command line length limit to 8192, to avoid long test.
+	* NEWS, THANKS: Update.
+
 2009-05-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Initial port for BlueGene BG/L.
