--- a/THANKS
+++ b/THANKS
@@ -113,6 +113,7 @@
   Kenneth Albanowski		kjahds@kjahds.com
   Kevin Ryde			user42@zip.com.au
   Kurt D. Zeilenga		Kurt@OpenLDAP.Org
+  Maciej Helminiak		dion2@wp.pl
   Maciej W. Rozycki		macro@linux-mips.org
   Manfred Weichel		Manfred.Weichel@pdb.siemens.de
   Marc Espie			espie@nerim.net
