--- a/THANKS
+++ b/THANKS
@@ -137,6 +137,7 @@
   Rainer Tammer			tammer@tammer.net
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Richard Purdie		rpurdie@rpsys.net
+  Richard Sandiford		richards@transitive.com
   Robert Millan			rmh@aybabtu.com
   Robert Ögren			lists@roboros.com
   Roberto Bagnara		bagnara@cs.unipr.it
