--- a/THANKS
+++ b/THANKS
@@ -76,6 +76,7 @@
   Brad Smith			brad@comstyle.com
   Brian Barrett			brbarret@osl.iu.edu
   Bruno Haible			haible@ilog.fr
+  Camilo La Rota		camilo.larota@ens-lyon.fr
   Carl D. Roth			roth@cse.ucsc.edu
   Chris P. Ross			cross@eng.us.uu.net
   Christian Biesinger		cbiesinger@web.de
